# stationary

./: .gitignore  README.md  database.sqlite3  database.sqlite3-shm  database.sqlite3-wal  main.py  pyproject.toml  schema.sql
templates/: getpost.html  index.html  join.html  layout.html  log.html  login.html  post.html  reply.html  user.html
