[project]
name = "stationary"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = [
    "tzdata>=2025.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stationary"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM", "N802", "T201", "ANN401"]

[tool.pyright]
reportAny = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportImportCycles = false
reportMissingModuleSource = false
reportPrivateUsage = false
reportUnusedCallResult = false
reportExplicitAny = false
